test/functions/elliot/compilerErrorCont.good
compilerErrorCont.chpl:12: error: errCont1
compilerErrorCont.chpl:12: warning: warn1
compilerErrorCont.chpl:13: error: errCont1
compilerErrorCont.chpl:13: warning: warn1
compilerErrorCont.chpl:14: error: errCont1
compilerErrorCont.chpl:14: warning: warn1
compilerErrorCont.chpl:16: warning: warn
compilerErrorCont.chpl:17: warning: warn
compilerErrorCont.chpl:19: error: errCont
compilerErrorCont.chpl:20: error: errCont
compilerErrorCont.chpl:22: error: errCont1
compilerErrorCont.chpl:22: warning: warn1
